fixed alignment issue in the about us page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3077,7 +3077,7 @@ body.is-loading #banner>.inner {
 #main>*>.inner {
 	padding: 4em 0 2em 0;
 	margin: 0 auto;
-	max-width: 65em;
+	max-width: 70em;
 	width: calc(100% - 6em);
 }
 
